--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <!--<verbose>true</verbose>-->
+                    <!--<fork>true</fork>-->
+                    <!--<executable>~/JDK/Oracle_x86_jdk1.8/bin/javac</executable>-->
                 </configuration>
             </plugin>
         </plugins>
@@ -25,12 +28,12 @@
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
-            <version>4.5.1</version>
+            <version>5.0.0</version>
         </dependency>
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna-platform</artifactId>
-            <version>4.1.0</version>
+            <version>5.0.0</version>
         </dependency>
 
     </dependencies>
